gccida/g1/ix86_expand_binary_operator
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_binary_operator/src/i386.c:7336:36: error: must use 'enum' tag to refer to type 'rtx_code'
void  ix86_expand_binary_operator( rtx_code code, machine_mode mode, rtx *operands) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_binary_operator/src/i386.c:7336:51: error: must use 'enum' tag to refer to type 'machine_mode'
void  ix86_expand_binary_operator( rtx_code code, machine_mode mode, rtx *operands) 
                                                  ^
                                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_binary_operator/src/i386.c:7429:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 6945, "ix86_expand_binary_operator"); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_binary_operator/src/obj/i386.o] Error 1
